--- a/package.json
+++ b/package.json
@@ -3,9 +3,39 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autoprefixer": "7.1.6",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^24.7.1",
+    "babel-preset-react-app": "^3.1.0",
+    "babel-runtime": "6.26.0",
+    "bootstrap": "^4.0.0-alpha.6",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "chalk": "1.1.3",
+    "css-loader": "^2.1.1",
+    "dotenv": "4.0.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "fs-extra": "3.0.1",
+    "html-webpack-plugin": "^4.0.0-beta.8",
+    "jest": "^24.7.1",
+    "jquery": "^3.4.1",
+    "object-assign": "4.1.1",
+    "postcss-flexbugs-fixes": "3.2.0",
+    "postcss-loader": "2.0.8",
+    "promise": "8.0.1",
+    "raf": "3.4.0",
     "react": "^16.12.0",
+    "react-datepicker": "^1.0.4",
+    "react-dev-utils": "^6.1.1",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "3.2.0",
+    "react-transition-group": "^2.2.1",
+    "reactstrap": "^5.0.0-alpha.4",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "style-loader": "0.19.0",
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-pdf": "^4.1.0"
   }
 }
