--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf/renderer": "^1.6.8",
     "autoprefixer": "7.1.6",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.7.1",
@@ -27,6 +28,7 @@
     "react-datepicker": "^1.0.4",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.12.0",
+    "react-pdf": "^4.1.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "3.2.0",
@@ -57,8 +59,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "react-pdf": "^4.1.0"
   }
 }
