--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "music-studio2",
+  "homepage": "https://github.com/smithWEBtek/music-studio2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,6 +17,7 @@
     "dotenv": "4.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "fs-extra": "3.0.1",
+    "gh-pages": "^2.1.1",
     "html-webpack-plugin": "^4.0.0-beta.8",
     "jest": "^24.7.1",
     "jquery": "^3.4.1",
@@ -43,7 +45,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
