--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@react-pdf/renderer": "^1.6.8",
     "autoprefixer": "7.1.6",
     "babel-core": "^6.26.3",
-    "babel-jest": "^24.7.1",
+    "babel-jest": "^26.6.3",
     "babel-preset-react-app": "^3.1.0",
     "babel-runtime": "6.26.0",
     "bootstrap": "^4.0.0-alpha.6",
@@ -19,8 +19,8 @@
     "fs-extra": "3.0.1",
     "gh-pages": "^2.1.1",
     "html-webpack-plugin": "^4.0.0-beta.8",
-    "jest": "^24.7.1",
-    "jquery": "^3.4.1",
+    "jest": "^26.6.3",
+    "jquery": "^3.5.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -33,7 +33,7 @@
     "react-pdf": "^4.1.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^4.0.1",
     "react-transition-group": "^2.2.1",
     "reactstrap": "^5.0.0-alpha.4",
     "redux": "^3.7.2",
