--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "homepage": "https://smithwebtek.github.io/music-studio2",
   "dependencies": {
-    "@react-pdf/renderer": "^1.6.8",
+    "@react-pdf/renderer": "^1.6.12",
     "autoprefixer": "7.1.6",
     "babel-core": "^6.26.3",
     "babel-jest": "^26.6.3",
     "babel-preset-react-app": "^3.1.0",
     "babel-runtime": "6.26.0",
-    "bootstrap": "^4.0.0-alpha.6",
-    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "bootstrap": "^4.5.3",
+    "case-sensitive-paths-webpack-plugin": "^2.3.0",
     "chalk": "1.1.3",
     "css-loader": "^2.1.1",
     "dotenv": "4.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "fs-extra": "3.0.1",
-    "gh-pages": "^2.1.1",
-    "html-webpack-plugin": "^4.0.0-beta.8",
+    "gh-pages": "^2.2.0",
+    "html-webpack-plugin": "^4.5.0",
     "jest": "^26.6.3",
     "jquery": "^3.5.1",
     "object-assign": "4.1.1",
@@ -26,11 +26,11 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
-    "react": "^16.12.0",
+    "react": "^17.0.1",
     "react-datepicker": "^1.0.4",
     "react-dev-utils": "^6.1.1",
-    "react-dom": "^16.12.0",
-    "react-pdf": "^4.1.0",
+    "react-dom": "^16.14.0",
+    "react-pdf": "^4.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^4.0.1",
