--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "music-studio2",
+  "name": "music-studio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://smithwebtek.github.io/music-studio2",
+  "homepage": "https://music-studio.smithwebtek.com",
   "dependencies": {
     "@react-pdf/renderer": "^1.6.12",
     "autoprefixer": "7.1.6",
