--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_URL='https://music-studio-api.smithwebtek.com/api'
+# REACT_APP_API_URL='https://music-studio-api.smithwebtek.com/api'
+REACT_APP_API_URL=http://localhost:3001/
